--- a/Band.App/MainPage.xaml
+++ b/Band.App/MainPage.xaml
@@ -21,34 +21,58 @@
                     </VisualTransition>
                 </VisualStateGroup.Transitions>
                 <VisualState x:Name="BluePressed">
-                    <Storyboard>
-                        <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Shape.Fill).(SolidColorBrush.Color)" Storyboard.TargetName="ellipse">
-                            <EasingColorKeyFrame KeyTime="0" Value="#FF3662FF"/>
-                            <EasingColorKeyFrame KeyTime="0:0:0.5" Value="White"/>
-                            <EasingColorKeyFrame KeyTime="0:0:1" Value="#FF3662FF"/>
-                        </ColorAnimationUsingKeyFrames>
-                    </Storyboard>
+                    <VisualState.Setters>
+                        <Setter Target="ellipse.(Shape.Stroke).(SolidColorBrush.Color)">
+                            <Setter.Value>
+                                <Color>White</Color>
+                            </Setter.Value>
+                        </Setter>
+                    </VisualState.Setters>
                 </VisualState>
-                <VisualState x:Name="GreenPressed"/>
-                <VisualState x:Name="YellowPressed"/>
-                <VisualState x:Name="RedPressed"/>
+                <VisualState x:Name="GreenPressed">
+                    <VisualState.Setters>
+                        <Setter Target="ellipse1.(Shape.Stroke).(SolidColorBrush.Color)">
+                            <Setter.Value>
+                                <Color>White</Color>
+                            </Setter.Value>
+                        </Setter>
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="YellowPressed">
+                    <VisualState.Setters>
+                        <Setter Target="ellipse2.(Shape.Stroke).(SolidColorBrush.Color)">
+                            <Setter.Value>
+                                <Color>White</Color>
+                            </Setter.Value>
+                        </Setter>
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="RedPressed">
+                    <VisualState.Setters>
+                        <Setter Target="ellipse3.(Shape.Stroke).(SolidColorBrush.Color)">
+                            <Setter.Value>
+                                <Color>#FCFFFFFF</Color>
+                            </Setter.Value>
+                        </Setter>
+                    </VisualState.Setters>
+                </VisualState>
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
         <StackPanel Margin="0,0,-2.4,0" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Grid Margin="0,0,30,0">
-                <Ellipse x:Name="ellipse" Fill="#FF3662FF" HorizontalAlignment="Center" Height="200" VerticalAlignment="Center" Width="200" Style="{StaticResource ButtonIndicatorStyle}"/>
+                <Ellipse x:Name="ellipse" Fill="#FF3662FF" Stroke="Transparent" HorizontalAlignment="Center" Height="250" VerticalAlignment="Center" Width="250" StrokeThickness="20"/>
                 <TextBlock x:Name="BlueCount" TextWrapping="Wrap" Text="105" Foreground="White" FontSize="48" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center" FontWeight="Bold"/>
             </Grid>
             <Grid Margin="0,0,30,0">
-                <Ellipse Fill="#FF3EE866" HorizontalAlignment="Center" Height="200" VerticalAlignment="Center" Width="200"/>
+                <Ellipse x:Name="ellipse1" Fill="#FF3EE866" Stroke="Transparent" HorizontalAlignment="Center" Height="250" VerticalAlignment="Center" Width="250" StrokeThickness="20"/>
                 <TextBlock x:Name="GreenCount" TextWrapping="Wrap" Text="105" Foreground="White" FontSize="48" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center" FontWeight="Bold"/>
             </Grid>
             <Grid Margin="0,0,30,0">
-                <Ellipse Fill="#FFFFE064" HorizontalAlignment="Center" Height="200" VerticalAlignment="Center" Width="200"/>
+                <Ellipse x:Name="ellipse2" Fill="#FFFFE064" Stroke="Transparent" HorizontalAlignment="Center" Height="250" VerticalAlignment="Center" Width="250" StrokeThickness="20"/>
                 <TextBlock x:Name="YellowCount" TextWrapping="Wrap" Text="105" Foreground="White" FontSize="48" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center" FontWeight="Bold"/>
             </Grid>
             <Grid>
-                <Ellipse Fill="#FFE8392B" HorizontalAlignment="Center" Height="200" VerticalAlignment="Center" Width="200"/>
+                <Ellipse x:Name="ellipse3" Fill="#FFE8392B" Stroke="Transparent" HorizontalAlignment="Center" Height="250" VerticalAlignment="Center" Width="250" StrokeThickness="20"/>
                 <TextBlock x:Name="RedCount" TextWrapping="Wrap" Text="105" Foreground="White" FontSize="48" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center" FontWeight="Bold"/>
             </Grid>
         </StackPanel>
