--- a/Band.App/MainPage.xaml
+++ b/Band.App/MainPage.xaml
@@ -9,5 +9,7 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
+        <Button Click="Button_Click" />
+
     </Grid>
 </Page>
